fix for downloads container spacing.

--- a/docs/.vuepress/theme/styles/download.styl
+++ b/docs/.vuepress/theme/styles/download.styl
@@ -127,6 +127,7 @@
         flex: 0 0 100%;
         padding: 0;
         margin-top: 10px !important;
+        margin-left: 0;
 
         li {
           list-style: none;
@@ -138,6 +139,7 @@
 
         small {
           display: inline-block;
+          margin: 0 10px 5px 0;
           font-weight: bold;
         }
       }
